# zippy

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  SOUL.md  docker-compose.yml
backend/: config.py  main.py  requirements.txt
backend/api/: chat.py  settings.py  speak.py  transcribe.py  websocket.py
backend/audio/: piper.py  whisper.py
backend/db/: crud.py  models.py
backend/llm/: anthropic.py  base.py  ollama.py  router.py
backend/utils/: soul.py
desktop/: .gitignore  README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.local.json.example
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  PointOverlay.tsx  main.tsx
frontend/src/components/Chat/: ChatContainer.tsx  InputArea.tsx  MessageBubble.tsx
frontend/src/components/Sidebar/: ConversationItem.tsx  Sidebar.tsx
frontend/src/components/Zippy/: ZippyAvatar.tsx
frontend/src/components/common/: LanguageSwitcher.tsx  ProviderSwitcher.tsx  StatusBar.tsx  ThemeToggle.tsx  VoiceToggle.tsx
frontend/src/hooks/: useSTT.ts  useScreenCapture.ts  useServerSTT.ts  useTTS.ts  useTheme.ts  useWebSocket.ts
frontend/src/i18n/: de.json  en.json  index.ts
frontend/src/lib/: conversationsApi.ts
frontend/src/stores/: chatStore.ts  settingsStore.ts
frontend/src/styles/: globals.css
