[package]
name = "zippy-desktop"
version = "0.1.0"
edition = "2021"
description = "Zippy desktop overlay — AI teacher next to your cursor"
authors = ["Holger Kuehn"]
license = "MIT"
repository = ""

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "zippy-desktop"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
